# phd-seeker-notifier

./: .env.sample  .pre-commit-config.yaml  README.md  cli.py  filters.py  notify.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  python-app.yml  search_and_notify.yml
psn/: cli.py  filters.py  notify.py
psn/sources/: daad.py
psn/sources/phd_seeker/: adapters.py  filters.py
tests/: test_filters.py
tests/fixtures/: PhD_Positions_2023-01-10[Computer Science, Machine Learning, Deep Learning].csv  phd.xml
tests/sources/: test_daad.py
tests/sources/phd_seeker/: test_adapters.py
