[tool.poetry]
name = "psn"
version = "0.1.0"
description = "Notify about PhD positions found using PhD Seeker."
authors = ["Ana Paula Gomes <apgomes88@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
phdseeker = "^0.4.5"
bs4 = "^0.0.1"
urllib3 = "^1.26.13"
freezegun = "^1.2.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pre-commit = "^2.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
